--- a/src/main/resources/public/kassenbuch.html
+++ b/src/main/resources/public/kassenbuch.html
@@ -13,6 +13,7 @@
   <body>
     <div id="kassenbuch">
       <page-header></page-header>
+      <page-header-kassenbuch v-bind:marker="'Kassenbuch'"></page-header-kassenbuch>
       <div id="content">
         <div class="form">
           <h1>Kassenbuch erstellen</h1>
@@ -80,5 +81,6 @@
   <script src="/scripts/util.js"></script>
   <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
+  <script src="/scripts/kassenbuch/kassenbuch.header.component.js"></script>
   <script src="/scripts/kassenbuch/kassenbuch.js"></script>
 </html>
