--- a/src/main/resources/public/kassenbuch.html
+++ b/src/main/resources/public/kassenbuch.html
@@ -22,10 +22,10 @@
             <input class="m2" type="date" v-model="model.zeitraumVon" />
           </div>
           <div class="m2">
-            <label>Rechnungsdatum von</label>
+            <label>Rechnungsdatum bis</label>
             <input class="m2" type="date" v-model="model.zeitraumBis" />
           </div>
-            <label>Kassenstand vom Vortag als Ausgangsbetrag f&uuml;r den</label>
+          <label>Kassenstand vom Vortag als Ausgangsbetrag f&uuml;r den</label>
           <div class="m1">
             <input class="m3m" type="number" step=".01" v-model="model.ausgangsbetrag" />
             <input class="m3" type="date" v-model="model.ausgangsbetragDatum" />
