--- a/src/main/resources/public/kassenstand.html
+++ b/src/main/resources/public/kassenstand.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Kassenbuch - Computer-Insel Tools by Sita Ge&szlig;ner</title>
+    <title>Kassenstand - Computer-Insel Tools by Sita Ge&szlig;ner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
