Loader hinzugefügt, Mehrfachhinzufügen von manuellen Posten im Kassenbuch korrigiert

--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="/themes/icons/zahnrad.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
     <link rel="stylesheet" href="/themes/css/raster.css">
     <link rel="stylesheet" href="/themes/css/style.css">
