Encoding je Seite auf UTF8

--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Filialen - Computer-Insel Tools by Sita Ge&szlig;ner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Filialen - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/zahnrad.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
