--- a/src/main/resources/public/kassenbuch.html
+++ b/src/main/resources/public/kassenbuch.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Kassenbuch - Computer-Insel Tools by Sita Ge&szlig;ner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Kassenbuch - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
@@ -26,7 +27,7 @@
             <label>Rechnungsdatum bis</label>
             <input class="m2" type="date" v-model="model.zeitraumBis" />
           </div>
-          <label>Kassenstand vom Vortag als Ausgangsbetrag f&uuml;r den</label>
+          <label>Kassenstand vom Vortag als Ausgangsbetrag für den</label>
           <div class="m1">
             <input class="m3m" type="number" step=".01" v-model="model.ausgangsbetrag" />
             <input class="m3" type="date" v-model="model.ausgangsbetragDatum" />
