--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Computer-Insel Tools by Sita Ge&szlig;ner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/style.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
