--- a/src/main/resources/public/kassenstand.html
+++ b/src/main/resources/public/kassenstand.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Kassenstand - Computer-Insel Tools by Sita Ge&szlig;ner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
