--- a/src/main/resources/public/statistiken.html
+++ b/src/main/resources/public/statistiken.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <title>Statistik - Computer-Insel Tools by Sita Ge&szlig;ner</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Statistik - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
@@ -32,7 +33,7 @@
           </div>
           <div class="m1">
             <button class="right" title="Erstellen" v-on:click="erstelleStatistikZahlungsarten">Erstellen</button>
-            <button class="right" title="&Uuml;berweisungen" v-on:click="erstelleStatistikUeberweisungen">&Uuml;berweisungen</button>
+            <button class="right" title="Überweisungen" v-on:click="erstelleStatistikUeberweisungen">Überweisungen</button>
           </div>
         </div>
         <messages-box v-bind:text="result" v-if="showDialog" @close="showDialog = false"></messages-box>
