Pflichtfelder kennzeichnen beim Editieren und Speichern-Button ausgrauen, wenn nicht alle gefüllt sind

--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -52,7 +52,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
-  <script src="/scripts/einstellungen/edit.dialog.component.js"></script>
+  <script src="/scripts/einstellungen/filiale.edit.dialog.component.js"></script>
   <script src="/scripts/einstellungen/einstellungen.header.component.js"></script>
   <script src="/scripts/einstellungen/filiale.js"></script>
 </html>
