Funktion zum hinzufügen einer neuer Filiale

--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -20,6 +20,7 @@
       <div id="content">
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
+            :actions="grid.actions"
             :columns="grid.gridColumns"
             :filter-key="grid.searchQuery"
             :rest-url="grid.restUrl"
