--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -19,12 +19,20 @@
       <div id="content">
         <div class="form">
           <div class="m1">
-            <label>Rechnungsverzeichnis</label>
-            <input class="m1" type="text" v-model="einstellungen.rechnungsverzeichnis.wert" />
+            <label for="einstellungenForm_rechungsverzeichnis">Rechnungsverzeichnis</label>
+            <input class="m1" id="einstellungenForm_rechungsverzeichnis" type="text" v-model="einstellungen.rechnungsverzeichnis.wert" />
           </div>
           <div class="m1">
-            <label>Ablageverzeichnis</label>
-            <input class="m1" type="text" v-model="einstellungen.ablageverzeichnis.wert" />
+            <label for="einstellungenForm_ablageverzeichnis">Ablageverzeichnis</label>
+            <input class="m1" id="einstellungenForm_ablageverzeichnis" type="text" v-model="einstellungen.ablageverzeichnis.wert" />
+          </div>
+          <div class="m1">
+            <div class="m2m">
+              <label for="einstellungenForm_filiale">Filiale</label>
+              <select class="m2" v-model="einstellungen.filiale.wert">
+                <option :value="f.key" v-for="f in filialen">{{f.value}}</option>
+              </select>
+            </div>
           </div>
           <div class="m1">
             <button class="right" v-on:click="speichernEinstellungen">Speichern</button>
