--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -8,13 +8,17 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="index">
+    <div id="reparatur">
       <page-header></page-header>
+      <page-header-reparatur v-bind:marker="'Erstellen'"></page-header-reparatur>
       <div id="content">
         Reparaturen
       </div>
     </div>
   </body>
+  <script src="/scripts/util.js"></script>
+  <script src="/scripts/messages.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
-  <script src="/scripts/index.js"></script>
+  <script src="/scripts/reparatur/reparatur.header.component.js"></script>
+  <script src="/scripts/reparatur/reparatur.js"></script>
 </html>
