--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -12,12 +12,31 @@
     <link rel="stylesheet" href="/themes/css/style.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
+    <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
   </head>
   <body>
     <div id="kunden">
       <page-header></page-header>
       <page-header-reparatur v-bind:marker="'Kunden'"></page-header-reparatur>
       <div id="content">
+        <div class="form m1">
+          <div class="m2m">
+            <label for="searchForm_nachname">Nachname</label>
+            <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
+          </div>
+          <div class="m2">
+            <label for="searchForm_vorname">Vorname</label>
+            <input class="m2" id="searchForm_vorname" type="text" v-model="grid.searchQuery.vorname"></input>
+          </div>
+          <div class="m6m">
+            <label for="searchForm_plz">PLZ</label>
+            <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
+          </div>
+          <div class="m1">
+            <button class="right" title="Suchen" v-on:click="grid.reload = true;">Suchen</button>
+          </div>
+        </div>
+        <div style="height: 200px;"></div>
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
             :actions="grid.actions"
@@ -25,6 +44,7 @@
             :filter-key="grid.searchQuery"
             :rest-url="grid.restUrl"
             :reload="grid.reload"
+            :search-query="grid.searchQuery"
             @reloaded="grid.reload = false"
           ></grid>
         </div>
