Funktionalität für Reparaturaufträge Ansehen/Bearbeiten/Löschen hinzugefügt
Styling für Checkboxen hinzugefügt

--- a/src/main/resources/public/kassenbuch.html
+++ b/src/main/resources/public/kassenbuch.html
@@ -61,11 +61,11 @@
           </div>
           <div class="m6">
             <label>&nbsp;</label><br>
-            <label class="container">-
+            <label class="container radio">-
               <input id="eintragungsartAusgang" type="radio" value="-1" v-model="manuell.eintragungen[index].eintragungsart" v-name="'eintragungsart_' + index">
               <span class="checkmark"></span>
             </label>
-            <label class="container">+
+            <label class="container radio">+
               <input id="eintragungsartEingang" type="radio" value="1" v-model="manuell.eintragungen[index].eintragungsart" v-name="'eintragungsart_' + index">
               <span class="checkmark"></span>
             </label>
