--- a/src/main/resources/public/reparatur-uebersicht.html
+++ b/src/main/resources/public/reparatur-uebersicht.html
@@ -68,6 +68,8 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/delete.dialog.component.js"></script>
+  <script src="/scripts/reparatur/reparatur.kunde.suchen.dialog.component.js"></script>
+  <script src="/scripts/reparatur/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.edit.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.header.component.js"></script>
   <script src="/scripts/reparatur/reparatur.uebersicht.js"></script>
