Boolean-Felder not nullable, Seite für DSGVO-Datenblatt ergänzt

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -146,8 +146,8 @@
               Expressbearbeitung:
             </td>
             <td class="s2" colspan="2">
-              <span lang="de" v:if="!entity.expressbearbeitung">NEIN</span>
-              <span lang="de" v:if="entity.expressbearbeitung">JA</span>
+              <span lang="de" v-if="!entity.expressbearbeitung">NEIN</span>
+              <span lang="de" v-if="entity.expressbearbeitung">JA</span>
             </td>
             <td width=25 style="border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               <p align=left style="widows: 0; orphans: 0">&nbsp;</p>
