--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -11,9 +11,7 @@
     <div id="index">
       <page-header></page-header>
       <div id="content">
-        <button class="panel">
-          <img src="themes/icons/kasse.png" height="100">
-        </button>
+        <h3>Willkommen!</h3>
       </div>
     </div>
   </body>
