--- a/src/main/resources/public/mitarbeiter.html
+++ b/src/main/resources/public/mitarbeiter.html
@@ -30,6 +30,15 @@
           ></grid>
         </div>
       </div>
+      <confirm-dialog
+        :func="confirmDialog.func"
+        :params="confirmDialog.params"
+        :text="confirmDialog.text"
+        :title="confirmDialog.title"
+        v-if="showConfirmDialog"
+        @close="showConfirmDialog = false"
+        @confirmed="handleConfirmResponse"
+      ></confirm-dialog>
       <edit-dialog
         :rest-url-get="editRow.restUrlGet"
         :rest-url-save="editRow.restUrlSave"
@@ -38,14 +47,24 @@
         @close="showEditDialog = false"
         @saved="handleEditResponse"
       ></edit-dialog>
+      <rechte-edit-dialog
+        :rest-url-get="editRechtDialog.restUrlGet"
+        :rest-url-save="editRechtDialog.restUrlSave"
+        :title="editRechtDialog.title"
+        v-if="showEditRechteDialog"
+        @close="showEditRechteDialog = false"
+        @saved="handleEditRechteResponse"
+      ></rechte-edit-dialog>
       <messages-box v-bind:text="result" v-if="showDialog" @close="showDialog = false"></messages-box>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
   <script src="/scripts/messages.dialog.component.js"></script>
+  <script src="/scripts/confirm.dialog.component.js"></script>
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/einstellungen/mitarbeiter.edit.dialog.component.js"></script>
+  <script src="/scripts/einstellungen/mitarbeiter.edit.rechte.dialog.component.js"></script>
   <script src="/scripts/einstellungen/einstellungen.header.component.js"></script>
   <script src="/scripts/einstellungen/mitarbeiter.js"></script>
 </html>
