--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -32,7 +32,7 @@
           </tr>
           <tr>
             <td class="left verdana u" width="45%" style="border-style: none; border-width: medium;" height="31">
-              Erstellt durch: {{entity.mitarbeiter.vorname}} {{entity.mitarbeiter.nachname}}
+              Erstellt durch: {{entity.mitarbeiter}}
             </td>
           </tr>
         </table>
@@ -452,7 +452,7 @@
             </td>
             <td colspan=2 width=929 style="; border-top: none; border-bottom: 1px solid #000000; border-left: none; border-right: none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="35">
               <p style="widows: 0; orphans: 0; text-decoration: none">
-                <font face="arial" size="4">{{entity.mitarbeiter.vorname}} {{entity.mitarbeiter.nachname}}</font>
+                <font face="arial" size="4">{{entity.mitarbeiter}}</font>
               </p>
             </td>
           </tr>
