Login-Form Autofill initiieren

--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -18,14 +18,16 @@
       <div id="content">
         <h3>Willkommen! Bitte melden Sie sich an:</h3>
           <div class="form">
-            <div class="m1">
-              <label for="loginForm_benutzername">Benutzername</label>
-              <input autofocus class="m1" id="loginForm_benutzername" maxlength="50" type="text" v-model="model.username" />
-            </div>
-            <div class="m1">
-              <label for="loginForm_passwort">Passwort</label>
-              <input class="m1" id="loginForm_passwort" maxlength="500" type="password" v-model="model.password"  />
-            </div>
+            <form autocomplete="on">
+              <div class="m1">
+                <label for="loginForm_benutzername">Benutzername</label>
+                <input autofocus class="m1" id="loginForm_benutzername" name="username" maxlength="50" type="text" v-model="model.username" />
+              </div>
+              <div class="m1">
+                <label for="loginForm_passwort">Passwort</label>
+                <input class="m1" id="loginForm_passwort" maxlength="500" name="password" type="password" v-model="model.password" />
+              </div>
+            </form>
             <button class="m2 right" v-on:click="login" @keyup.enter.native="login">Anmelden</button>
           </div>
       </div>
