Gewünschte Anpassungen an Reparaturauftrag vorgenommen
* Kürzerer Text über Unterschriftenfeld
* Überlassung zur Entsorgung als Option anbieten

--- a/src/main/resources/public/reparatur-drucken.html
+++ b/src/main/resources/public/reparatur-drucken.html
@@ -199,16 +199,13 @@
             </td>
           </tr>
           <tr valign=top>
-            <td width=227 style="; border-left:1px solid; border-right:medium none; border-top:1px solid; border-bottom:medium none; padding:0cm; " valign="bottom" height="71">&nbsp;</td>
-            <td width=904 style="; border-top: 1px solid; border-bottom: 1px solid #000000; border-left: medium none; border-right: medium none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="middle" height="71" colspan="2">
+            <td width=227 style="; border-left:1px solid; border-right:medium none; border-top:1px solid; border-bottom:medium none; padding:0cm; " valign="bottom" height="30">&nbsp;</td>
+            <td width=904 style="; border-top: 1px solid; border-bottom: 1px solid #000000; border-left: medium none; border-right: medium none; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="middle" height="30" colspan="2">
               <font face="arial">
-                <span lang="de">Hiermit erteile ich den oben beschriebenen Auftrag und erkläre mich damit einverstanden, dass ggf. telefonisch Änderungen am Auftrag besprochen werden, durch die sich der Auftragsinhalt und der Preis &auml;ndern kann. Die von mir gemachten Angaben sind korrekt. 
-              Ich verpflichte mich, das Gerät spätestens 14 Tage nach 
-              Fertigstellung abzuholen. (Expressbearbeitung = 25€ Aufpreis)
-                </span>
+                Ich akzeptiere die AGB und erteile den oben beschriebenen Auftrag.
               </font>
             </td>
-            <td width=25 style="; border-top: 1px solid; border-bottom: medium none #000000; border-left: medium none; border-right: 1px solid; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="71">&nbsp;</td>
+            <td width=25 style="; border-top: 1px solid; border-bottom: medium none #000000; border-left: medium none; border-right: 1px solid; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" valign="bottom" height="30">&nbsp;</td>
           </tr>
           <tr valign=top>
             <td width=227 style="; border-left:1px solid; border-right:medium none; border-top:medium none; border-bottom:medium none; padding:0cm; " valign="bottom" height="62">
@@ -260,14 +257,7 @@
               <td width="20%"><font size="2">nicht<br>erreicht</font></td>
               <td width="20%"><font size="2">Angehör.<br>inform.</font></td>
             </tr>
-            <tr>
-              <td width="62%" height="45" colspan="3">&nbsp;</td>
-              <td width="20%" height="45">&nbsp;</td>
-              <td width="20%" height="45">&nbsp;</td>
-              <td width="20%" height="45">&nbsp;</td>
-              <td width="20%" height="45">&nbsp;</td>
-            </tr>
-            <tr>
+            <tr v-for="index in 2">
               <td width="62%" height="45" colspan="3">&nbsp;</td>
               <td width="20%" height="45">&nbsp;</td>
               <td width="20%" height="45">&nbsp;</td>
@@ -284,10 +274,9 @@
           </table>
         </div>
         <hr noshade color="#000000">
-        <br>
-        <table width="100%" cellpadding=4 cellspacing=0 frame=void rules=none style="border-collapse: collapse" bordercolor="#111111" height="75">
+        <table width="100%" cellpadding=4 cellspacing=0 frame=void rules=none style="border-collapse: collapse" bordercolor="#111111" height="100">
           <tr>
-            <td width=226 height=1 valign=bottom style="border-left:1px solid; border-right:medium none; border-top:1px solid; border-bottom:1px solid; padding:0cm; ">
+            <td width=226 height=1 valign=bottom style="border-left:1px solid; border-right:medium none; border-top:1px solid; border-bottom:1px solid; padding:0cm;">
               <p align=left style="widows: 0; orphans: 0">
                 <font size=4 face="arial, sans-serif" color="#000000">Gerät ausgehändigt am, Unterschrift Kunde:</font>
               </p>
@@ -295,12 +284,10 @@
             <td width=928 valign=top style="; border-top: 1px solid; border-bottom: 1px solid #000000; border-left: medium none; border-right: 1px solid; padding-top: 0cm; padding-bottom: 0.1cm; padding-left: 0cm; padding-right: 0cm" align="left" height="1">
               <p align=left>
                 <font face="arial">
-                  Hiermit bestätige ich 
-                  (Kunde) das oben genannte Gerät inkl. Zubehör 
-                  vollständig und
-                  <span class="auto-style1"><br>&#9675;</span> repariert /
-                  <span class="auto-style1">&#9675;</span> nicht repariert
-                  zurückerhalten zu haben.
+                  Hiermit bestätige ich (Kunde), das oben genannte Gerät inkl. Zubehör vollständig<br>
+                  <span class="auto-style1" style="width: 100%">&#9675; repariert zurück erhalten zu haben.</span><br>
+                  <span class="auto-style1" style="width: 100%">&#9675; nicht repariert zurück erhalten zu haben.</span><br>
+                  <span class="auto-style1" style="width: 100%">&#9675; zur Entsorgung überlassen zu haben.</span><br>
                 </font>
                 <br>
               </p>
