--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -106,7 +106,7 @@
         v-if="showKundeDialog"
         @close="showKundeDialog = false"
         @saved="handleKundeResponse"
-      ></edit-dialog>
+      ></kunde-suchen-dialog>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
